Estrutura dos pacotes, mongo e swagger adicionados

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,22 @@ spring:
     banner-mode: "off"
   application:
     name: pauta-voting
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: sicredi_pauta_voting
+      username: root
+      password: root
+      authentication-database: admin
 
 server:
   port: 8080
+
+logging:
+  level:
+    ROOT: INFO
+    org.springframework: INFO
+    org.springframework.data.mongodb.core.MongoTemplate: INFO
+    org.apache.http: INFO
+    org.springframework.web: INFO
