Integção com pauta-info para validar se a pauta existe

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,7 @@ logging:
 client:
   url:
     user-info: https://user-info.herokuapp.com
+    pauta-info: http://localhost:8081/pauta-info
 
 feign:
   logger:
